--- a/assets/pug/layout/chat-layout/chat-left-sidebar.pug
+++ b/assets/pug/layout/chat-layout/chat-left-sidebar.pug
@@ -6,8 +6,8 @@ div.border-r.border-gray-light.h-full.tabs.flex.flex-col.gap-0.left-sidebar-asid
     div.p-4.pb-0(class="dark:bg-sidebar-dark")
       div.flex.items-center.justify-between
         h4.text-xl.font-extrabold(class="dark:text-white") Messages
-        label(for='modal-16')
-          i(data-feather="plus"  class="block w-8 h-8 p-2 scale-100 stroke-primary bg-gray-light hover:scale-110 dark:bg-sidebar-dark2 lg:hidden")
+        label(for='createroom-modal')
+          i(data-feather="plus" class="block w-8 h-8 p-2 scale-100 stroke-primary bg-gray-light hover:scale-110 dark:bg-sidebar-dark2 lg:hidden")
           i(data-feather="chevrons-left" class="hidden h-6 cursor-pointer stroke-title left-sidebar-toggle lg:block")
     div.p-4.pb-0(class="dark:bg-sidebar-dark")
       div.swiper.basicSlider 
