--- a/assets/pug/pages/template/video-app.pug
+++ b/assets/pug/pages/template/video-app.pug
@@ -154,11 +154,11 @@ html(lang='en')
             img(src='../../assets/images/chat-app/11.jpg' alt='women in gray shirt' class="max-w-[200px] lg:max-w-[190px] h-[200px] rounded-none")
     //-  New add
     div.modal-main(class="lg:hidden")  
-      input#modal-16(class="peer" name="modal-8" type='checkbox')
+      input#createroom-modal(class="peer" name="modal-8" type='checkbox')
       label.modal-overlay(class="peer-checked:block" for='modal-8')
       div.modal(class="max-w-sm peer-checked:opacity-100 peer-checked:visible dark:bg-sidebar-dark2")
         div.modal-body 
-          label(for='modal-16')
+          label(for='createroom-modal')
             i(data-feather="x" class="w-5 h-5 stroke-dark") 
           form.theme-form.flex.flex-col.gap-2
             h3 Create Your Room
