--- a/assets/pug/data/dropdown.pug
+++ b/assets/pug/data/dropdown.pug
@@ -16,7 +16,7 @@
     [
       {
         title:"Rephrase Words",
-        status:"success"
+        status:"primary"
       },
       {
         title:"Presentation",
@@ -32,7 +32,7 @@
       },
       {
         title:"Quizz",
-        status:"success"
+        status:"primary"
       },
       {
         title:"Introduction",
