--- a/assets/pug/data/widgets.pug
+++ b/assets/pug/data/widgets.pug
@@ -69,7 +69,7 @@
             {
                 title:"Total Sells",
                 icon:"Money-Hand",
-                status:"success",
+                status:"primary",
                 profit:20.790,
                 gros:36.28,
                 data:" Total Sells Compared to last year",
