--- a/html/template/ecommerce.html
+++ b/html/template/ecommerce.html
@@ -1027,8 +1027,8 @@
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-8">
                         <div class="flex items-center gap-[9px] 2xl:flex-col 2xl:items-start ">
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
-                            <div class="bg-success opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
-                            <svg class="strong-hover-shake fill-success 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
+                            <div class="bg-primary opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
+                            <svg class="strong-hover-shake fill-primary 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
                               <use href="../../../assets/svg/bold_sprite.svg#Money-Hand"></use>
                             </svg>
                           </div>
@@ -1470,7 +1470,7 @@
                     <div class="col-span-3 xl:col-span-3 2md:col-span-12"> 
                       <ul class="flex flex-col gap-[14px] 2md:gap-[8px] 2md:flex-row 2md:flex-wrap">
                         <li>
-                          <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-success h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Rephrase Words</span></button>
+                          <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-primary h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Rephrase Words</span></button>
                         </li>
                         <li>
                           <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-danger h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Presentation</span></button>
@@ -1482,7 +1482,7 @@
                           <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-warning h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Drag and Drop</span></button>
                         </li>
                         <li>
-                          <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-success h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Quizz</span></button>
+                          <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-primary h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Quizz</span></button>
                         </li>
                         <li>
                           <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-danger h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Introduction</span></button>
