--- a/html/template/index.html
+++ b/html/template/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">  
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -1617,7 +1617,7 @@
                     <h3 class="text-lg font-bold text-title leading-none">News &amp; Update</h3>
                   </div>
                 </div>
-                <div class="card-body"> 
+                <div class="card-body">  
                   <ul> 
                     <li class="group flex items-center group justify-between gap-3 first:pt-0 last:pb-0 first:border-none py-[13px] border-t border-border-light dark:border-border-dark dark:border-t"> 
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
@@ -1680,7 +1680,7 @@
                     <div class="col-span-2 xl:col-span-3 2md:col-span-12"> 
                       <ul class="flex flex-col gap-[14px] 2md:gap-[8px] 2md:flex-row 2md:flex-wrap">
                         <li>
-                          <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-success h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Rephrase Words</span></button>
+                          <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-primary h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Rephrase Words</span></button>
                         </li>
                         <li>
                           <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-danger h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Presentation</span></button>
@@ -1692,7 +1692,7 @@
                           <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-warning h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Drag and Drop</span></button>
                         </li>
                         <li>
-                          <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-success h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Quizz</span></button>
+                          <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-primary h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Quizz</span></button>
                         </li>
                         <li>
                           <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-danger h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Introduction</span></button>
